syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Events {
    repeated AtomCreated atom_createds = 1;
}

message AtomCreated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes creator = 5;
    bytes wallet = 6;
    string vault_id = 7;
}


